# SerialPort-Assistant

./: .gitignore  CMakeLists.txt  Makefile  README.md  Serial_data.cpp  Serial_data.h  serialGUIMain.cpp  serialGUIMain.h
.github/workflows/: build.yml
src/: Serial_data.cpp  Serial_data.h  serialGUIApp.cpp  serialGUIApp.h  serialGUIFunctions.cpp  serialGUIMain.cpp  serialGUIMain.h
src/GUI/: GUI_Graphic.cpp  GUI_Graphic.h  serialGUIConfigBox.cpp  serialGUIConfigBox.h  serialTextPlus.cpp  serialTextPlus.h
src/locale/: zh_CN.po
